# ChangeLog for net-news/canto-curses
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-news/canto-curses/ChangeLog,v 1.3 2015/04/08 18:17:12 mgorny Exp $

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> canto-curses-0.8.4.ebuild:
  Drop old Python implementations

  26 Nov 2014; Pacho Ramos <pacho@gentoo.org> canto-curses-0.8.4.ebuild:
  Support python 3.4

*canto-curses-0.8.4 (20 Feb 2014)

  20 Feb 2014; Sergey Popov <pinkbyte@gentoo.org> +canto-curses-0.8.4.ebuild,
  +metadata.xml:
  Initial commit, wrt bug #462028