@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test
-DEPEND=python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3[ncurses] ) python_targets_python3_4? ( dev-lang/python:3.4[ncurses] ) >=dev-lang/python-exec-2:=[python_targets_python3_3(-)?,python_targets_python3_4(-)?,-python_single_target_python3_3(-),-python_single_target_python3_4(-)]
-DESCRIPTION=The ncurses client for canto-daemon
-EAPI=5
-HOMEPAGE=http://codezen.org/canto-ng/
-IUSE=python_targets_python3_3 python_targets_python3_4
-KEYWORDS=~amd64 ~x86
-LICENSE=GPL-2
-RDEPEND=>=net-news/canto-daemon-0.8.2[python_targets_python3_3(-)?,python_targets_python3_4(-)?,-python_single_target_python3_3(-),-python_single_target_python3_4(-)] python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3[ncurses] ) python_targets_python3_4? ( dev-lang/python:3.4[ncurses] ) >=dev-lang/python-exec-2:=[python_targets_python3_3(-)?,python_targets_python3_4(-)?,-python_single_target_python3_3(-),-python_single_target_python3_4(-)]
-REQUIRED_USE=|| ( python_targets_python3_3 python_targets_python3_4 )
-SLOT=0
-SRC_URI=http://codezen.org/static/canto-curses-0.8.4.tar.gz
-_eclasses_=distutils-r1	c01d5c4af34f4a37a51fc9638299c222	eutils	9fb270e417e0e83d64ca52586c4a79de	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	6d3a3cb5705b9fff1aeb7cfa4e3336fe	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=68178eeea2643610b438723dd887b46c
